# klaus-judge

./: .gitignore  quick-start.sh
api/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  go.mod  go.sum
api/cmd/: main.go
api/internal/config/: db.go  env.go  migrate.go  redis.config.go
api/internal/domain/: constants.go  contest.domain.go  pagination.go  problem.domain.go  submission.domain.go  test-case-result.domain.go  test-case.domain.go  user.go
api/internal/dto/: auth.dto.go  problem.dto.go  submission.dto.go  user.dto.go
api/internal/handlers/: health.handler.go
api/internal/models/: health.go
api/internal/repository/: health.repo.go  problem.repo.go  submission.repo.go  testcase-result.repo.go  testcase.repo.go  user.repo.go
api/internal/routes/: router.go
client/: middleware.ts  package-lock.json  package.json
client/app/: globals.css  layout.tsx
client/components/: app-sidebar.tsx  protected-route.tsx  team-switcher.tsx
client/config/: axios.ts
client/constants/: home-sidebar-links.ts  sidebar-links.ts
worker/: .env.example  Cargo.toml  Dockerfile  README.md  start_worker.sh
worker/docker-images/cpp/: Dockerfile
worker/docker-images/python/: Dockerfile
worker/src/: main.rs
worker/src/config/: mod.rs  settings.rs
worker/src/database/: connection.rs  mod.rs  submission.rs  test_cases.rs
worker/src/errors/: mod.rs  types.rs
worker/src/models/: mod.rs  result.rs  submission.rs  test_case.rs
worker/src/services/: executor.rs  judge.rs  mod.rs  queue.rs
worker/src/utils/: logger.rs
(+108 files in other folders)
